RESOLVED FIXED92874
Web Inspector: Crashes in NetworkResourcesData.
https://bugs.webkit.org/show_bug.cgi?id=92874
Summary Web Inspector: Crashes in NetworkResourcesData.
Vsevolod Vlasov
Reported 2012-08-01 07:47:55 PDT
Attachments
Patch (3.19 KB, patch)
2012-08-01 07:52 PDT, Vsevolod Vlasov
yurys: review+
Vsevolod Vlasov
Comment 1 2012-08-01 07:52:18 PDT
Vsevolod Vlasov
Comment 2 2012-08-01 07:58:29 PDT
Note You need to log in before you can comment on or make changes to this bug.