Web Inspector: Crashes in NetworkResourcesData. https://bugs.webkit.org/show_bug.cgi?id=92874

Reviewed by Yury Semikhatsky.

* inspector/NetworkResourcesData.cpp:
(WebCore::contentSizeInBytes):
(WebCore):
(WebCore::NetworkResourcesData::ResourceData::removeContent):
(WebCore::NetworkResourcesData::ResourceData::decodeDataToContent):
(WebCore::NetworkResourcesData::setResourceContent):
(WebCore::NetworkResourcesData::maybeDecodeDataToContent):

Canonical link: https://commits.webkit.org/110708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124335 268f45cc-cd09-0410-ab3c-d52691b4dbfc